--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,14 @@
             <version>7.0.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.jasypt/jasypt -->
+        <dependency>
+            <groupId>org.jasypt</groupId>
+            <artifactId>jasypt</artifactId>
+            <version>1.9.3</version>
+        </dependency>
+
+
     </dependencies>
 
 </project>
